2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Change |{getc_until}| to |{read_until}|
	and |manakai_getc_until| to |manakai_read_until| to
	reduce the number of string copies.

2008-09-14  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (parse_char_string): Use newly created
	|Whatpm::Charset::DecodeHandle::CharString| instead of Perl's
	standard feature to |open| a string as a filehandle,
	since Perl's string filehandle seems not supporting |ungetc|
	method correctly.
	(parse_char_stream): Define |{getc_until}| method.
	(DATA_STATE): Experimental support for |getc_until| feature.

2008-09-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Check points added to newly added branches.

2008-09-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Remove |{char}|, which is no longer used.
	Remove |{entity_in_attr}| and |{last_attribute_value_state}|
	and replaced by |{prev_state}|.

	* mkhtmlparser.pl: Remove |{char}| feature.
	Remove |!!!back-next-input-character;| macro.

2008-09-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Finally we get rid of all the inner loops.  Remove
	entity related tokenizer states in favor of new states
	implementing the consume character reference algorithm.

2008-09-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: "Consume a character reference" algorithm is
	now implemented as a tokenizer's state, rather than
	a method, with minimum changes (more changes will
	be made, in due course).  "Bogus comment state"'s inner
	loop gets removed.

2008-09-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Make |PUBLIC| and |SYSTEM| keyword tokenizing
	into their own tokenizer states.

2008-09-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |CDATA_SECTION_STATE| (formally |CDATA_BLOCK_STATE|
	is split into three states.

2008-09-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |CLOSE_TAG_OPEN_STATE| is broken into
	itself and new |CDATA_PCDATA_CLOSE_TAG_STATE| so that
	no longer does the tokenizer have to push back next input