@@ -1,7 +1,7 @@
 1..1073
 # Running under perl version 5.008007 for linux
-# Current time local: Sun Sep 14 12:04:49 2008
-# Current time GMT:   Sun Sep 14 03:04:49 2008
+# Current time local: Sun Sep 14 12:47:16 2008
+# Current time GMT:   Sun Sep 14 03:47:16 2008
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
