@@ -1,7 +1,7 @@
 1..3105
 # Running under perl version 5.008007 for linux
-# Current time local: Sun Sep 14 12:04:57 2008
-# Current time GMT:   Sun Sep 14 03:04:57 2008
+# Current time local: Sun Sep 14 12:47:46 2008
+# Current time GMT:   Sun Sep 14 03:47:46 2008
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
