@@ -1,5 +1,9 @@
 2008-09-14  Wakaba  <wakaba@suika.fam.cx>
 
+	* DecodeHandle.pm: Typo fixed.
+
+2008-09-14  Wakaba  <wakaba@suika.fam.cx>
+
 	* DecodeHandle.pm, UnicodeChecker.pm: Change |manakai_getc_until|
 	to |manakai_read_until| to reduce the number of string copies.
 
