@@ -1,5 +1,9 @@
 2008-09-14  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: Use |{read_until}| where possible.
+
+2008-09-14  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src: Change |{getc_until}| to |{read_until}|
 	and |manakai_getc_until| to |manakai_read_until| to
 	reduce the number of string copies.
